--- a/public/login.ejs
+++ b/public/login.ejs
@@ -18,6 +18,6 @@
       </div>
       <br>
       <button type="submit" class="btn btn-primary">Submit</button>
-      <p>Doesn't have account?<a href="/Register">Register</a></p>
+      <p>Doesn't have account?<a href="/register">register</a></p>
     </form>
   </div>
