--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,6 +1,6 @@
 <%- include ('home.ejs') %>
 <div id="login">
-    <form action="/Register" method="POST">
+    <form action="/register" method="POST">
       <div class="mb-3">
         <input type="email" placeholder="Email address" class="form-control" id="exampleInputEmail1"
           aria-describedby="emailHelp" name="email">
@@ -17,7 +17,7 @@
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
       </div>
       <br>
-      <button type="submit" class="btn btn-primary">Register</button>
+      <button type="submit" class="btn btn-primary">register</button>
       <a href="/login">login</a>
     </form>
   </div>
