modal and bootstrap fixes

--- a/views/pages/bid.ejs
+++ b/views/pages/bid.ejs
@@ -1,4 +1,4 @@
-<%- include ('home.ejs') %>
+<%- include ('navbar') %>
     <h1 class="heading">Start Your Bidding Journey</h1>
     <div id="bid">
         <form action="/buy" method="post">
