--- a/views/pages/buy.ejs
+++ b/views/pages/buy.ejs
@@ -1,4 +1,4 @@
-<%- include ('home.ejs') %>
+<%- include ('navbar') %>
   <% biditem.forEach(user=>{ %>
 
     <div class="card" style="width: 300px; height: 300px; display: inline-flex ;justify-content: space-between;">
