--- a/views/pages/description.ejs
+++ b/views/pages/description.ejs
@@ -1,64 +1,57 @@
-<%- include ('home.ejs') %>
+<%- include('../partials/head'); %>
+    <%- include ('navbar') %>
+        <div style="text-align: center;">
+            <% biditem.forEach(user=>{ %>
+                <h4>ID:</h4>
+                <p>
+                    <%= user.product_id %>
+                </p>
+                <h4>Name:</h4>
+                <p>
+                    <%= user.product_name %>
+                </p>
+                <h4>Description:</h4>
+                <p>
+                    <%= user.product_description %>
+                </p>
+                <h4>Price:</h4>
+                <p>
+                    <%= user.product_price %>
+                </p>
+                <h4>Category:</h4>
+                <p>
+                    <%= user.product_category %>
+                </p>
+                <h4>Publish Date:</h4>
+                <p>
+                    <%= user.publish_date %>
+                </p>
+                <% }) %>
+        </div>
 
-    <div style="text-align: center;">
-        <% biditem.forEach(user=>{ %>
-            <h4>ID:</h4>
-            <p>
-                <%= user.product_id %>
-            </p>
-            <h4>Name:</h4>
-            <p>
-                <%= user.product_name %>
-            </p>
-            <h4>Description:</h4>
-            <p>
-                <%= user.product_description %>
-            </p>
-            <h4>Price:</h4>
-            <p>
-                <%= user.product_price %>
-            </p>
-            <h4>Category:</h4>
-            <p>
-                <%= user.product_category %>
-            </p>
-            <h4>Publish Date:</h4>
-            <p>
-                <%= user.publish_date %>
-            </p>
+<!-- Button to trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch Modal
+</button>
 
-
-
-
-
-
-
-            <% }) %>
-    </div>
-<div class="container">
-    <h2>Modal Example</h2>
-    <!-- Trigger the modal with a button -->
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
-
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-
+            <div class="modal-body">
+                <!-- Modal Body Content -->
+                This is the content of the modal.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <!-- Additional buttons if needed -->
+            </div>
         </div>
     </div>
-
 </div>
