--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,4 +1,4 @@
-<%- include ('home.ejs')%>
+<%- include ('navbar')%>
   <div id="login">
     <form action="/login" method="POST">
       <div class="mb-3">
