--- a/views/pages/buy.ejs
+++ b/views/pages/buy.ejs
@@ -1,10 +1,15 @@
 <%- include ('navbar') %>
+
+
   <% biditem.forEach(user=>{ %>
 
-    <div class="card" style="width: 300px; height: 300px; display: inline-flex ;justify-content: space-between;">
-      <img src="<%= user.images %>" class="card-img-top" alt="imagess" />
+    <div class="card">
+      <img src="maruti.jpeg" alt="image" style="width: 300px; height: 200px;">
+
 
       <div class="card-body">
+
+
         <h5 class="card-title">
           <%= user.product_name %>
         </h5>
