--- a/views/pages/description.ejs
+++ b/views/pages/description.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/head'); %>
     <%- include ('navbar') %>
-        <div style="text-align: center;">
+        <div style="text-align: center;" class="alldetails">
             <% biditem.forEach(user=>{ %>
                 <h4>ID:</h4>
                 <p>
@@ -26,32 +26,8 @@
                 <p>
                     <%= user.publish_date %>
                 </p>
+
                 <% }) %>
         </div>
 
-<!-- Button to trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch Modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <!-- Modal Body Content -->
-                This is the content of the modal.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <!-- Additional buttons if needed -->
-            </div>
-        </div>
-    </div>
-</div>
+        <a href="/purchase"> Add your bid</a>
