--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -1,27 +1,53 @@
 <%- include ('head') %>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Launch demo modal
+    </button>
+    
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="purchase">
+                    
+                        <form action="/description/<%= user.product_id %>" method="post">
+                            <input type="email" placeholder="Email address" name="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" required>
+                            <input id="price" type="number" class="form-control" name="price" placeholder="Enter Your Price" required>
+                            <button type="submit" class="btn btn-primary" data-dismiss="modal">Save</button>
+                        </form>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="purchase">
+   
+        <form action="/description/<%= user.product_id %>" method="post">
+            <input type="email" placeholder="Email address" name="email" class="form-control" id="exampleInputEmail1"
+                aria-describedby="emailHelp" required>
+            <input id="price" type="number" class="form-control" name="price" placeholder="Enter Your Price" required>
+            <button type="submit" class="btn btn-primary" data-dismiss="modal">Save</button>
+        </form>
+    </div>
